<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nameLbl" />
    <EditText
        android:id="@+id/nameEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneLbl">
    </TextView>
    <EditText
        android:id="@+id/phoneEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneHintLbl">
    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mailLbl">
    </TextView>
    <EditText
        android:id="@+id/mailEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    <CheckBox
        android:id="@+id/mailCb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkMailLbl" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genderLbl">
    </TextView>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/genderMaleRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginEnd="15dp"
            android:text="@string/maleLbl" />
        <RadioButton
            android:id="@+id/genderFemaleRb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/femaleLbl" />
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cityLbl">
    </TextView>
    <EditText
        android:id="@+id/cityEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>

    <Spinner
        android:id="@+id/statesSp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/astates" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cleanBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:text="@string/clearLbl" />
    <Button
        android:id="@+id/saveBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_weight="1"
        android:text="@string/saveLbl" />
    </LinearLayout>
</LinearLayout>